--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,14 +4,45 @@
   padding: 20px 0
 }
 
-.wrapper {
+.footerWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-color: #F7F8F2;
   height: 160px;
 }
 
+.footerSocial {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
 .footerSocial svg {
-  color: #fff;
+  color: #EB5160;
   width: 24px;
   height: 24px;
-  margin-right: 10px;
 }
+
+.footerLink {
+  display: flex;
+  justify-content: space-around;
+  width: 650px;
+}
+
+.footerLink a {
+  color: #EB5160;
+  text-decoration: none;
+}
+
+.footerLink a:hover {
+  text-decoration: underline;
+}
+
+.footerSeparator {
+    border-left: 2px solid #EB5160;
+    height: 70%;
+    margin-top: 0.75%;
+}
+
