--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,17 +1,14 @@
 .footer {
-  background-color: #EB5160;
-  height: 200px;
-  padding: 20px 0
-}
-
-.footerWrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #F7F8F2;
-  height: 160px;
+  background-color: var(--main-background-color);
+  height: 200px;
+  border-top: 20px solid var(--red-background-color);
+  border-bottom: 20px solid var(--red-background-color);
 }
+
 
 .footerSocial {
   display: flex;
@@ -20,7 +17,7 @@
 }
 
 .footerSocial svg {
-  color: #EB5160;
+  color: var(--red-background-color);
   width: 24px;
   height: 24px;
 }
@@ -32,7 +29,7 @@
 }
 
 .footerLink a {
-  color: #EB5160;
+  color: var(--red-background-color);
   text-decoration: none;
 }
 
@@ -41,8 +38,7 @@
 }
 
 .footerSeparator {
-    border-left: 2px solid #EB5160;
+    border-left: 2px solid var(--red-background-color);
     height: 70%;
     margin-top: 0.75%;
 }
-
