--- a/src/screens/Home/Home.css
+++ b/src/screens/Home/Home.css
@@ -105,13 +105,13 @@ color: var(--main-background-color);
 
 .membersContainer {
   display: flex;
-  justify-content: space-around;
+  justify-content:space-around;
   flex-direction: row;
   margin-bottom: 40px;
 }
 
-.imgPoles {
-  width: 25%;
+.imgTeam {
+  width: 100%;
   height: 400px;
 }
 
@@ -127,6 +127,16 @@ color: var(--main-background-color);
   border-bottom: solid;
   color: white;
   width: 100%;
+}
+
+.teamMember {
+  width: 30%;
+  border: 1px solid #F7F8F2;
+}
+
+.memberName {
+  margin: 0;
+  background: transparent;
 }
 
 @media screen and (max-width: 1500px) {
