--- a/src/screens/Contact/Contact.css
+++ b/src/screens/Contact/Contact.css
@@ -169,5 +169,40 @@
   width: 100%;
   height: 550px;
   background-color: var(--green-background-color);
+  color: var(--main-background-color);
   margin-top: 40px;
+  text-align: left;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.contactFromItems {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 0 60px;
+}
+
+.contactFromItems input {
+  border: none;
+  height: 35px;
+  box-shadow: 1px 1px 2px rgba(107, 107, 107, 0.9);
+}
+
+.contactFromItems textarea {
+  border: none;
+  height: 200px;
+  box-shadow: 1px 1px 2px rgba(107, 107, 107, 0.9);
+}
+
+.contactFrom button {
+  width: 150px;
+  padding: 10px 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: var(--red-background-color);
+  color: var(--main-background-color);
+  align-self: center;
+  box-shadow: 0 0 3px #c7525d;
 }
