--- a/src/screens/Contact/Contact.css
+++ b/src/screens/Contact/Contact.css
@@ -109,6 +109,12 @@
   color: var(--main-background-color);
   width: 24px;
   height: 24px;
+  cursor: pointer;
+  transition: 0.1s;
+}
+
+.contactInfoSocialLink svg:hover {
+  transform: scale(1.1);
 }
 
 .contactInfoText {
@@ -171,6 +177,7 @@
   background-color: var(--green-background-color);
   color: var(--main-background-color);
   margin-top: 40px;
+  padding-top: 10px;
   text-align: left;
   display:flex;
   flex-direction: column;
@@ -185,15 +192,20 @@
 }
 
 .contactFromItems input {
-  border: none;
   height: 35px;
-  box-shadow: 1px 1px 2px rgba(107, 107, 107, 0.9);
 }
 
 .contactFromItems textarea {
-  border: none;
   height: 200px;
+}
+
+.contactFromItems input , .contactFromItems textarea {
+  border: none;
   box-shadow: 1px 1px 2px rgba(107, 107, 107, 0.9);
+}
+
+.contactFromItems input:focus , .contactFromItems textarea:focus {
+  outline: 1px solid var(--red-background-color);
 }
 
 .contactFrom button {
@@ -205,4 +217,12 @@
   color: var(--main-background-color);
   align-self: center;
   box-shadow: 0 0 3px #c7525d;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+
+.contactFrom button:hover {
+  transform: scale(1.1);
+  color: #000;
 }
