--- a/src/screens/Contact/Contact.css
+++ b/src/screens/Contact/Contact.css
@@ -81,7 +81,7 @@
 }
 
 .contactInfoText {
-  width: 260px;
+  width: 35%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -99,11 +99,15 @@
   margin: 5px 0 0 0 ;
 }
 
+.contactInfoText p:last-child {
+  margin-top: 15px;
+}
+
 
 
 .contactInfoMap {
-  transform: translateY(-40%);
-  width: 400px;
+  transform: translate(15%, -40%);
+  width: 40%;
 }
 
 .contactInfoMap iframe {
@@ -145,17 +149,19 @@
   display:flex;
   flex-direction: column;
   justify-content: space-around;
+  align-items: center;
 }
 
 .contactFromItems {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  padding: 0 60px;
+  width: 60%;
 }
 
 .contactFromItems input {
   height: 35px;
+  padding: 2px 10px;
 }
 
 .contactFromItems textarea {
