--- a/src/screens/Home/Home.css
+++ b/src/screens/Home/Home.css
@@ -16,7 +16,7 @@
 }
 
 
-.conceptTitle {
+.conceptTitle, .teamTitle {
 font-size: 30px;
 padding-left: 3%;
 padding-right: 3%;
@@ -129,18 +129,6 @@ color: var(--title-color);
 .imgTeam {
   width: 100%;
   height: 400px;
-}
-
-.teamTitle {
-  font-size: 30px;
-  padding-left: 3%;
-  padding-right: 3%;
-  width: 100%;
-  text-align: center;
-  border-bottom: 3px solid var(--title-color);
-  line-height: 0.1em;
-  margin: 10px 0 20px;
-  color: var(--title-color);
 }
 
 .teamTitle span {
