--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,7 @@
 
 .header {
   flex-direction: column;
-  height: 650px;
+  height: 280px;
   background-color: #EB5160;
   margin-bottom: 50px;
   color: white;
@@ -12,7 +12,7 @@
 
 .logo-container {
   align-items: center;
-  height: 40%;
+  height: 80%;
 }
 
 .header-logo {
@@ -28,14 +28,18 @@
 
 .navlist {
   border-top: 1px solid;
-  height: 10%;
+  height: 20%;
   width: 100%;
+  overflow: hidden;
+
 }
 
 .navlist div {
   height: 100%;
+  width: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
   border-left: 1px solid;
   border-top: 0;
   border-bottom: 0;
@@ -43,27 +47,35 @@
 }
 
 .navlist div p {
-  margin: 0 30px;
+  margin: 0 15px;
   transform: skew(30deg) rotate(0deg);
 }
 
-.navlist :not(:first-child,:last-child) {
-  width: 15%;
+.navlist div img {
+  transform: skew(30deg) rotate(0deg);
 }
 
-.navlist :first-child {
+.navlist div:not(:first-child,:last-child) {
+  width: 45%;
+}
+
+.navlist div:first-child {
   width: 6%;
   border-left: 0;
 }
 
-.navlist :last-child {
-  flex-grow: 1;
+.navlist div:last-child {
   border-right: 0;
 }
-
 
 .blere-beach {
   height: 55%;
   background-image: url('../../assets/blere-beach.png');
   background-size: 100% 100%;
+}
+
+.user-icon {
+  height: 75%;
+  margin-left: auto;
+  margin-right: 20px;
 }
