--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -78,3 +78,18 @@
   margin-left: auto;
   margin-right: 20px;
 }
+
+.user-icon:hover {
+  height: 85%;
+  margin-right: 30px;
+}
+
+p a {
+  color: white;
+  text-decoration: none;
+}
+
+p a:hover {
+  font-size: 1.1em;
+  color: #52908B;
+}
