add leaflet/ map contact

--- a/src/screens/Contact/Contact.css
+++ b/src/screens/Contact/Contact.css
@@ -111,13 +111,10 @@
 
 
 .contactInfoMap {
-  transform: translate(35%, -40%);
-}
-
-.contactInfoMap iframe {
-  border-radius: 3px;
-  box-shadow: 1px 1px 2px rgba(107, 107, 107, 0.9);
-  border: none;
+  transform: translate(35%, -25%);
+  position: relative;
+  width: 400px;
+  height: 250px;
 }
 
 .contactMessage {
