home modification for center size, add axios, move pole in screen, axios pole wip

--- a/src/screens/Home/Home.css
+++ b/src/screens/Home/Home.css
@@ -1,6 +1,7 @@
 .homeContainer {
-  background: var(--main-background-color);
-  width: 100%;
+  /* background: var(--main-background-color); */
+  width: 80%;
+  margin:auto;
 }
 
 .conceptContainer {
