--- a/src/screens/Home/Home.css
+++ b/src/screens/Home/Home.css
@@ -1,7 +1,30 @@
+/* HEADER */
+
 .homeContainer {
   background: var(--main-background-color);
   width: 100%;
 }
+
+.homeContactContainer {
+  display: flex;
+  justify-content: space-around;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+.descContainer {
+  padding-bottom: 70px;
+}
+
+.ebeDesc {
+  font-weight: bold;
+}
+
+/* .contactElements {
+  width: 12%;
+} */
+
+/* CONCEPT */
 
 .conceptContainer {
   background: #52908B;
@@ -12,9 +35,9 @@
 .titleContainer {
   display: flex;
   align-items: center;
-  padding-top: 20px;
+  padding-top: 50px;
+  padding-bottom: 30px;
 }
-
 
 .conceptTitle, .teamTitle {
 font-size: 30px;
@@ -36,45 +59,89 @@ color: var(--title-color);
 .part1 {
   display: flex;
   justify-content:space-around;
-  padding-top: 50px;
+  padding-top: 30px;
 }
+
+.conceptP1 {
+  text-align: left;
+  width: 50%;
+  color: var(--title-color);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 12px;
+  font-size: 18px;
+  padding-left: 25px;
+}
+
+.block-buster {
+  display: flex;
+  align-items: center;
+}
+
+.borderText {
+  border-left: solid #fff 10px;
+  height: 45px;
+  padding-top: 10px;
+}
+
+.borderP {
+  padding-left: 20px;
+  font-weight: bold;
+}
+
 .part2 {
   display: flex;
   justify-content:space-around;
-  padding-top: 50px;
 }
+
+.conceptP2 {
+  text-align: left;
+  width: 50%;
+  color: var(--title-color);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 12px;
+  font-size: 22px;
+  padding-left: 12px;
+}
+
+.conceptP3 {
+  text-align: left;
+  width: 50%;
+  color: var(--title-color);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 12px;
+  font-size: 16px;
+}
+
 .part3 {
   display: flex;
   justify-content:space-around;
-  padding-top: 50px;
 }
 
-.conceptPart {
-  padding-bottom: 40px;
-}
-
-.conceptP {
-  width: 45%;
-  color: var(--title-color);
-}
+/* POLES */
 
 .poles {
   display: flex;
   flex-direction: column;
-  margin-bottom: 60px;
+  margin-bottom: 80px;
 }
 
 .poleTitleContainer {
   display: flex;
   align-items: center;
-  padding-top: 20px;
+  margin-top: 40px;
+  margin-bottom: 30px;
 }
 
 .polesContainer {
   display: flex;
   justify-content: space-around;
   flex-direction: row;
-  margin-top: 20px;
 }
 
 .imgPoles {
@@ -92,6 +159,8 @@ color: var(--title-color);
   border-bottom: 3px solid var(--main-font-color);
   line-height: 0.1em;
   margin: 10px 20px 20px;
+  padding-top: 40px;
+  margin-bottom: 50px;
 }
 
 .poleTitle span {
@@ -99,11 +168,8 @@ color: var(--title-color);
   padding: 0 10px;
 }
 
-.poleBorder {
-  border-bottom: solid;
-  color: var(--main-font-color);
-  width: 100%;
-}
+/* TEAM */
+
 
 .teamContainer {
   display: flex;
@@ -115,14 +181,15 @@ color: var(--title-color);
   display: flex;
   align-items: center;
   padding-top: 20px;
-  margin-top: 10px;
+  margin-top: 30px;
+  margin-bottom: 40px;
 }
 
 .membersContainer {
   display: flex;
   justify-content:space-around;
   flex-direction: row;
-  margin-bottom: 40px;
+  margin-bottom: 80px;
   margin-top: 20px;
 }
 
@@ -130,6 +197,7 @@ color: var(--title-color);
   width: 100%;
   height: 400px;
 }
+
 
 .teamTitle span {
   background: var(--green-background-color);
