--- a/src/App.css
+++ b/src/App.css
@@ -18,9 +18,14 @@ body {
   text-align: center;
 }
 
-.main-container {
+.mainContainer {
   display: flex;
   flex-direction: column;
+}
+
+.centerContainer {
+  width: 80%;
+  margin:auto;
 }
 
 h1 {
@@ -32,6 +37,12 @@ h1 {
 h2 {
   font-family: 'Pacifico', cursive;
   color: var(--title-color);
+  align-content: center;
+  position: relative;
+  bottom: 40px;
+  background-color:var(--green-background-color);
+  display:inline-block; 
+  padding: 0px 20px;
 }
 
 h3 {
@@ -41,4 +52,58 @@ h3 {
 
 nav {
   background-color: var(--red-background-color);
+}
+
+/* CONCEPT ~ FONCTIONNEMENT */
+.greenContainer {
+  width: 100%;
+  height: 100%;
+  background: var(--green-background-color);
+  margin-top: 5%;
+  margin-bottom: 6%;
+  padding-top: 50px;
+}
+
+.titleContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  height: 10%;
+}
+
+.titleLigns {
+  width: 100%;
+  height: 60%;
+  border-top:var(--main-background-color)solid 5px;
+}
+
+.bothGreenContainer {
+  display: flex;
+  width: 100%;
+}
+
+.leftGreenContainer{
+  width: 50%;  
+  display: flex;
+  align-items: center;
+}
+
+.rightGreenContainer{
+  width: 50%;
+
+}
+
+img.greenSection {
+  width: 100%;
+}
+
+p.creamLeftAlign {
+text-align: left;
+margin: 30px;
+color: var(--title-color);
+align-content: center;
+}
+
+.green {
+  background-color: var(--green-background-color);
 }
