add rubanpole css, make soe change in banners, mapping in activities is working and clean

--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,10 @@ nav {
   background-color: var(--red-background-color);
 }
 
+.banner img {
+  width: 100%;
+}
+
 /* CONCEPT ~ FONCTIONNEMENT */
 .greenContainer {
   width: 100%;
