--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,11 @@ nav {
 
 .banner img {
   width: 100%;
+  margin-top: 278px;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 /* CONCEPT ~ FONCTIONNEMENT */
