--- a/src/App.css
+++ b/src/App.css
@@ -116,3 +116,23 @@ align-content: center;
 .green {
   background-color: var(--green-background-color);
 }
+
+
+/* Medias querries */
+
+@media screen and (max-width: 1500px) {
+  .conceptBorder {
+    border-bottom: solid;
+    color: white;
+    width: 100%;
+  }
+
+  .conceptTitle {
+    font-size: 30px;
+    padding-left: 40px;
+    padding-right: 40px;
+    
+    }
+}
+
+/* CONCEPT ~ FONCTIONNEMENT */
