[STYLE] add responsive on concept page

--- a/src/components/Card/MemberCard.css
+++ b/src/components/Card/MemberCard.css
@@ -1,5 +1,6 @@
 .card-container {
   width: 400px;
+  padding-bottom: 50px;
 }
 
 .member-img {
@@ -17,14 +18,54 @@
 }
 
 .member-title {
-
+  margin-top: 10px;
 }
 
-.card-desc h3 {
-  color: #52908B;
+.member-title h5 {
+  color: var(--green-background-color);
   font-family: open sans, sans-serif;
+  font-size: 18px;
+  text-transform: uppercase;
+  margin: 5px;
 }
 
-.card-desc p {
-  color: #52908B;
+.member-title p {
+  color: var(--green-background-color);
+  
+}
+
+@media screen and (max-width: 600px) {
+  .card-container {
+    width: 90%;
+    padding-bottom: 50px;
+    align-content: center;
+  }
+  
+  .member-img {
+    width: 100%;
+    height: 350px;
+  }
+  
+  .card-desc {
+    background: var(--main-background-color);
+    height: 76px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  
+  .teamTitleContainer {
+    display: flex;
+    align-items: center;
+    padding-top: 20px;
+    margin-top: 60px;
+  }
+
+  .teamTitle span {
+    background: var(--green-background-color);
+    padding: 0 10px;
+  }
+
 }
