add route to parteners in app.js, add partenaires in navbar, create component Ruban with props

--- a/src/screens/Partners/Partners.css
+++ b/src/screens/Partners/Partners.css
@@ -50,8 +50,8 @@
   width: 100px;
   height: 100px;
 }
-.green{
-  background-color: green;
+.purple{
+  background-color: purple;
   width: 100px;
   height: 100px;
 }
