--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,73 +1,56 @@
 .flex {
-    display: flex;
-  }
+  display: flex;
+}
 
+.navlist {
+  height: 54px;
+  width: 100%;
+  background-color: #EB5160;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+  overflow: hidden;
+}
+
+.navlist div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  border-right: 1px solid white;
+  transform: skew(-30deg) rotate(0deg);
+}
   
-  .navlist {
-    border-top: 1px solid;
-    height: 20%;
-    width: 100%;
-    overflow: hidden;
-  
-  }
-  
-  .navlist div {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-left: 1px solid;
-    border-top: 0;
-    border-bottom: 0;
-    transform: skew(-30deg) rotate(0deg);
-  }
-  
-  .navlist div p {
-    margin: 0 15px;
-    transform: skew(30deg) rotate(0deg);
-  }
-  
-  .navlist div img {
-    transform: skew(30deg) rotate(0deg);
-  }
-  
-  .navlist div:not(:first-child,:last-child) {
-    width: 45%;
-  }
-  
-  .navlist div:first-child {
-    width: 6%;
-    border-left: 0;
-  }
-  
-  .navlist div:last-child {
-    border-right: 0;
-  }
-  
-  .blere-beach {
-    height: 55%;
-    background-image: url('../../assets/blere-beach.png');
-    background-size: 100% 100%;
-  }
-  
-  .user-icon {
-    height: 75%;
-    margin-left: auto;
-    margin-right: 20px;
-  }
-  
-  .user-icon:hover {
-    height: 85%;
-    margin-right: 30px;
-  }
-  
-  p a {
-    color: white;
-    text-decoration: none;
-  }
-  
-  p a:hover {
-    font-size: 1.1em;
-    color: #52908B;
-  }
+.navlist div:not(:first-child,:last-child) {
+  width: 45%;
+}
+
+.navlist div:first-child {
+  width: 6%;
+  color: #EB5160;
+}
+
+.navlist div:last-child {
+  border-right: 0;
+  transform: skew(0deg) rotate(0deg);
+  color:
+}
+
+.user-icon {
+  height: 75%;
+  margin-left: auto;
+  margin-right: 20px;
+}
+
+.user-icon:hover {
+  height: 85%;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+a:hover {
+  font-size: 1.1em;
+  color: #52908B;
+}
