--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,12 @@ nav {
   border-top:var(--main-background-color)solid 5px;
 }
 
+.titleRedLine {
+  width: 100%;
+  height: 60%;
+  border-top:var(--red-background-color)solid 5px;
+}
+
 .bothGreenContainer {
   display: flex;
   width: 100%;
