--- a/src/screens/Partners/Partners.css
+++ b/src/screens/Partners/Partners.css
@@ -1,50 +1,37 @@
-.dispFlex{
+.flex{
   display: flex;
-  flex-direction: column;
-  margin: 20px 0px;
 }
-
 .width100{
   width:100%;
   min-height: 50vh;
   height: auto;
 }
-
 .partners{
+  flex-direction: column;
   background-color: #F7F8F2;
 }
-
 /*------------------------------------------------*/
-
-.ribbon{
-  height: 150px;
+.banner-top{
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  background: darkslateblue;
+  overflow: hidden;
+  background-size: cover;
 }
-.mission h2{
-  color: blueviolet;
+.banner-top img{
+  width: 100%;
+  height: 15vh;
+  /* object-fit: cover; */
 }
+/*------------------------------------------------*/
 
-.missionWrapper{
-  display: flex;
-  flex-direction: row;
-  justify-content: center
-}
-
-.blue{
-  width: 50%;
-  height: 150px;
-  margin: 20px;
-  background-color: blue;
-  color: #F7F8F2;
-}
-
-.partnersWrapper{
+/* .partnersWrapper{
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-}
+} */
 .pink{
   background-color: pink;
   width: 100px;
@@ -69,17 +56,6 @@
   background-color: yellow;
   width: 100px;
   height: 100px;
-}
-
-.text{
-  width: 50%;
-  display: flex;
-  margin: 20px;
-  flex-direction: column;
-  justify-content: center;
-  background-color: red;
-  color: #F7F8F2;
-  padding: 20px;
 }
 
 .function, .give{
