--- a/src/components/GreenBox/GreenBox.css
+++ b/src/components/GreenBox/GreenBox.css
@@ -1,27 +1,29 @@
-.titleCreamContainer{
-    padding: 80px 0px 40px 0px;
+.titleGreenContainer{
+    padding: 80px 0px 40px 0px;adding-top: 80px;
+    background: var(--green-background-color);
 }
 
-.creamWrapper{
+.greenWrapper{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    background: var(--green-background-color);
 }
 
-.creamLeftBlock{
+.greenLeftBlock{
     flex-direction: column;
     align-items: center;
     width: 50%;
     margin: 0 20px;
     padding: 0 20px;
 }
-.creamLeftBlock img{
+.greenLeftBlock img{
     min-width: 50%;
     max-width: 100%;
     margin: 20px;
 }
 
-.creamRightBlock{
+.greenRightBlock{
     flex-direction: column;
     justify-content: space-evenly;
     text-align: left;
@@ -29,9 +31,9 @@
     margin: 20px;
     padding: 20px;
 }
-.creamRightBlock p{
-    border-left: 6px solid var(--red-background-color: #EB5160);
-    color: var(--main-font-color: #EB5160);
+.greenRightBlock p{
+    /* border-left: 6px solid var(--main-background-color); */
+    color: var(--sections-txt-color);
     padding-left: 20px;
     font-size: 1.5vw;
 }
