contact added to navbar + BlockPartners created as component + css

--- a/src/components/GreenBox/GreenBox.css
+++ b/src/components/GreenBox/GreenBox.css
@@ -1,5 +1,5 @@
 .titleGreenContainer{
-    padding: 80px 0px 40px 0px;adding-top: 80px;
+    padding: 80px 0px 40px 0px;
     background: var(--green-background-color);
 }
 
