--- a/src/screens/Partners/Partners.css
+++ b/src/screens/Partners/Partners.css
@@ -27,35 +27,18 @@
 }
 /*------------------------------------------------*/
 
-/* .partnersWrapper{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-} */
-.pink{
-  background-color: pink;
-  width: 100px;
-  height: 100px;
+.paragraph {
+  color: var(--sections-txt-color);
+  padding: 20px 160px 20px 160px;
+  text-align: left;
 }
-.purple{
-  background-color: purple;
-  width: 100px;
-  height: 100px;
+
+.paragraph ul{
+  padding-left: 40px
 }
-.orange{
-  background-color: orange;
-  width: 100px;
-  height: 100px;
-}
-.red{
-  background-color: red;
-  width: 100px;
-  height: 100px;
-}
-.yellow{
-  background-color: yellow;
-  width: 100px;
-  height: 100px;
+
+.paragraph li{
+  padding-left: 15px;;
 }
 
 .function, .give{
@@ -64,9 +47,7 @@
   height: 200px;
 }
 
-/* .services{} */
-
-.contactBlock, .services, .thanks{
+.contactBlock, .thanks{
   background-color: #F7F8F2;
   padding: 20px;
 }
