--- a/src/components/Card/PoleCard.css
+++ b/src/components/Card/PoleCard.css
@@ -26,6 +26,7 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  transition : all 0.5s ease-in-out;
 }
 
 .catchPhrase {
