--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,6 @@ a:hover {
 
 .rightGreenContainer{
   width: 50%;
-
 }
 
 img.greenSection {
@@ -121,12 +120,20 @@ align-content: center;
 
 /* screen above 1024px */
 @media only screen and (min-width: 1024px) {
-
+  .leftGreenContainer{
+    width: 30%;  
+    display: flex;
+    align-items: center;
+  }
+  
+  .rightGreenContainer{
+    width: 70%;
+  }
 
 }
 
-/* screen under 414px */
-@media only screen and (max-width: 414px) {
+/* screen under 700px */
+@media only screen and (max-width: 700px) {
 
   .mainContainer{
     width: 100%;
@@ -148,10 +155,6 @@ align-content: center;
 
   .leftGreenContainer {
     width: 100%;
-  }
-
-  p.creamLeftAlign {
-    text-align: center;
   }
 
   .rightGreenContainer {
