fix pb with prettier, sorry

--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,7 @@ a:hover {
 .titleContainer {
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
   height: 10%;
 }
 
