--- a/src/components/ActivitiesPole/ActivitiesPole.css
+++ b/src/components/ActivitiesPole/ActivitiesPole.css
@@ -10,7 +10,7 @@
 .titleCreamContainer {
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
   height: 10%;
 }
 
