add responsive and social icon back

--- a/src/screens/Contact/Contact.css
+++ b/src/screens/Contact/Contact.css
@@ -20,9 +20,13 @@
 }
 
 .contactInfoContent {
-  width: 60%;
+  width: 80%;
   display: flex;
   justify-content: space-between;
+}
+
+.contactInfoItems {
+  display: flex;
 }
 
 .contactInfoSocialLink {
@@ -32,9 +36,10 @@
   align-items: center;
   justify-content: center;
   gap: 20px;
+  padding-right: 30px;
 }
 
-.contactInfoSocialLink svg {
+.contactInfoSocialLink img {
   color: var(--main-background-color);
   width: 24px;
   height: 24px;
@@ -42,17 +47,30 @@
   transition: 0.1s;
 }
 
-.contactInfoSocialLink svg:hover {
+.contactInfoSocialLink img:hover {
   transform: scale(1.1);
 }
 
 .contactInfoText {
+  min-width: 160px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   color: var(--main-background-color);
   font-weight: 400;
   text-align: left;
+  gap: 10px;
+}
+
+.contactInfoTextPhone {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
+
+
+.contactInfoText p {
+margin: 0;
 }
 
 .contactInfoText h4 {
@@ -60,18 +78,9 @@
   margin: 0;
 }
 
-.contactInfoText p {
-  margin: 5px 0 0 0 ;
-}
 
-.contactInfoText p:last-child {
-  margin-top: 15px;
-}
-
-
-
-.contactInfoMap {
-  transform: translate(35%, -20%);
+.contactMap {
+  transform: translate(20%, -20%);
   position: relative;
   width: 400px;
   height: 250px;
@@ -150,4 +159,35 @@
 .contactFrom button:hover {
   transform: scale(1.1);
   color: #000;
+}
+
+
+@media screen and (max-width: 700px) {
+  .contactInfo {
+    flex-direction:column;
+    height: 100%;
+    align-self:center;
+    margin: 30px;
+  }
+
+  .contactInfoContent {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 400px;
+  }
+
+  .contactInfoItems {
+    padding: 20px 0 5px 0;
+  }
+
+  .contactMap {
+    transform: translate(0%, -10%);
+    width: 102%;
+    margin-top: 20px;
+  }
+
+  .contactFromItems {
+    width: 85%;
+  }
 }
