title font, sticky nav, link tzcld

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400&family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script');
 
 :root {
   --main-background-color: #F7F8F2;
@@ -30,13 +31,13 @@ body {
 }
 
 h1 {
-  font-family: 'Pacifico', cursive;
+  font-family: 'Dancing script', cursive;
   color: var(--title-color);
   background-color: var(--red-background-color);
 }
 
 h2 {
-  font-family: 'Pacifico', cursive;
+  font-family: 'Dancing script', cursive;
   color: var(--title-color);
   align-content: center;
   position: relative;
@@ -47,7 +48,7 @@ h2 {
 }
 
 h3 {
-  font-family: 'Pacifico', cursive;
+  font-family: 'Dancing script', cursive;
   color: var(--red-background-color);
 }
 
