--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,7 @@
 
 .header {
   flex-direction: row;
-  height: 80px;
+  height: 150px;
   background-color: #EB5160;
   color: white;
 }
@@ -24,14 +24,12 @@
 
 .header-text {
   max-width: 75%;
+  display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   text-align: left;
 }
-.header-text p{
-  margin:0px;
-  font-size: 20px;
-}
+
+
 .offset-right{
   padding-left: 10vw;
 }
