--- a/src/screens/Home/Home.css
+++ b/src/screens/Home/Home.css
@@ -169,6 +169,7 @@ color: var(--title-color);
 }
 
 .poleTitle span {
+  font-family: 'Dancing script', cursive;
   background: var(--title-color);
   padding: 0 10px;
 }
