--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -45,10 +45,12 @@
   height: 75%;
   margin-left: auto;
   margin-right: 20px;
+  cursor: pointer;
+  transition: 0.2s;
 }
 
 .user-icon:hover {
-  height: 85%;
+  transform: scale(1.05);
 }
 
 a {
@@ -58,4 +60,39 @@ a {
 
 a:hover {
   text-decoration:underline;
+}
+
+
+/* MODAL */
+
+button.modal-toggle,input[type="submit"],.form-btn {
+  background-color: var(--red-background-color);
+  color: var(--main-background-color);
+  cursor: pointer;
+  width: 100px;
+  padding: 0.5rem;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 2px;
+  margin: 5px 15px;
+  transition: 0.3s;
+}
+
+.form-group {
+margin-top: 10px;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="email"] {
+box-sizing: border-box;
+width: 100%;
+padding: 0.5rem 0.7rem;
+}
+
+@media screen and (max-width:400px){
+  button.modal-toggle,input[type="submit"],.form-btn {
+    font-size: 80%;
+    width: 60%;
+  }
 }
