Add routes to AdminLinkBtn, you can create a new pole, each object created has an id its className

--- a/src/screens/Admin/Admin.css
+++ b/src/screens/Admin/Admin.css
@@ -32,13 +32,13 @@
 	border-bottom: solid 1px #616161;
 	background-color: #212121;
 }
-.adminLeftButton{
+.adminLinkButton{
 	background-color: #414141;
 	padding: 20px;
 	margin: 10px;
 	border-radius: 5px;
 }
-.adminLeftButton:hover{
+.adminLinkButton:hover{
 	cursor: pointer;
 	background-color: #515151;
 }
@@ -74,20 +74,38 @@
 	margin: 20px;
 }
 .topDivTitle{
+	position: relative;
 	font-size: larger;
 	padding: 10px;
 	background-color: var(--main-font-color);
 	border-radius: 20px 20px 0px 0px;
 }
-.cardContainer{
-	padding: 20px;
-	background-color: lightgray;
-		border-radius: 0px 0px 20px 20px;
+.addButton{
+	position: absolute;
+	font-size: 16px;
+	top: calc(50% - 8px);
+	right: 50px;
 }
-
+.addButton:hover{
+	cursor: pointer;
+}
+.plusBtn{
+	height: 20px;
+	width: 20px;
+	margin-left:15px;
+	font-size: large;
+	background-color: snow;
+	border-radius: 5px;
+	color: var(--main-font-color)
+}
+.cardContainer{
+	background-color: lightgray;
+	border-radius: 0px 0px 20px 20px;
+	overflow-x: scroll;
+}
 .card{
-	height: 200px;
-	width: 200px;
+	min-height: 200px;
+	min-width: 200px;
 	margin: 20px;
 }
 .card:hover{
@@ -99,16 +117,32 @@
 .bottomDiv{
 	margin: 20px;
 }
-
 .form{
+	position: relative;
 	width: 80%;
 	padding: 20px;
 	border-radius: 20px;
 	background-color: #313131
 }
 .bottomDivTitle{
-	padding: 10px;
 	font-size: larger;
+	padding: 10px;
+}
+.closeBtn{
+	position: absolute;
+	font-size: 16px;
+	top: 25px;
+	right: 25px;
+	height: 20px;
+	width: 20px;
+	margin-left:15px;
+	font-size: large;
+	background-color: snow;
+	border-radius: 5px;
+	color: var(--main-font-color)
+}
+.closeBtn:hover{
+	cursor: pointer;
 }
 .boxInput{
 	width: 80%;
@@ -130,4 +164,11 @@ button{
 }
 .colorme{
 	background-color: darkseagreen;
+	border-radius: 10px;
+}
+
+.bg{
+	padding: 20px;
+		background-color: lightgray;
+	border-radius: 0px 0px 20px 20px;
 }
