--- a/src/screens/Admin/form.css
+++ b/src/screens/Admin/form.css
@@ -1,4 +1,4 @@
-.teamDroplist {
+.formDroplist {
   width: 100%;
   height: 300px;
   background: #E64980;
@@ -9,7 +9,7 @@
   flex-direction: column;
 }
 
-.teamTitle {
+.formTitle {
   color: #CED4DA;
 }
 
@@ -18,24 +18,38 @@
   justify-content: space-around;
 }
 
-.teamTitleForm {
+.formTitleForm {
   color: #E64980;
 }
 
-.teamFormContainer {
+.FormContainer {
   width: 100%;
   background: #CED4DA;
   padding: 40px;
 }
 
-.teamFormList {
+.FormList {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin-top: 20px;
 }
 
-.teamItems {
+
+.formAddUserBtn {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #E64980;
+  border: solid 1px black;
+  cursor: pointer;
+}
+
+.formAddUserBtn svg {
+  transform: translateX(-45%);
+}
+
+.formItems {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -46,7 +60,7 @@
   background: #E64980;
 }
 
-.teamButton {
+.formButton {
   display: flex;
   justify-content: space-around;
   align-items: center;
