--- a/src/screens/Admin/Admin.css
+++ b/src/screens/Admin/Admin.css
@@ -125,14 +125,16 @@
 }
 .cardContent{
 	position: relative;
-	min-height: 200px;
-	min-width: 200px;
+	width:100%;
+	height:100%;
+	pointer-events: none;
 }
-.cardContent img{
+/* .cardContent img{
 	position: absolute;
 	min-height: 200px;
 	min-width: 200px;
-}
+} */
+
 .btnDeleteCard{
 	position: absolute;
 	font-size: 16px;
@@ -200,6 +202,9 @@
 	color: white;
 	background-color: var(--main-font-color);
 }
+.btnForm:hover{
+cursor: pointer;
+}
 .colorme{
 	background-color: darkseagreen;
 	border-radius: 10px;
@@ -209,4 +214,8 @@
 	padding: 20px;
 		background-color: lightgray;
 	border-radius: 0px 0px 20px 20px;
+}
+
+.blue{
+	background-color: dodgerblue;
 }
