--- a/src/screens/Admin/ActivityAdmin.css
+++ b/src/screens/Admin/ActivityAdmin.css
@@ -50,7 +50,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .activityButton {
