delay before closing form reduced

--- a/src/screens/Admin/Admin.css
+++ b/src/screens/Admin/Admin.css
@@ -206,6 +206,7 @@
 cursor: pointer;
 }
 .colorme{
+	/* background-color: var(--green-background-color); */
 	background-color: darkseagreen;
 	border-radius: 10px;
 }
