--- a/src/screens/Contact/Contact.css
+++ b/src/screens/Contact/Contact.css
@@ -98,7 +98,7 @@ margin: 0;
   margin: 0;
 }
 
-.contactMessage span {
+.contactMessageTitle {
   background:var(--main-background-color);
     padding:0 10px;
 }
@@ -160,6 +160,10 @@ margin: 0;
 .contactFrom button:hover {
   transform: scale(1.1);
   color: #000;
+}
+
+.formMessage {
+  background-color: var(--green-background-color)
 }
 
 
