multer multiple upload

--- a/src/screens/Home/Home.css
+++ b/src/screens/Home/Home.css
@@ -145,7 +145,9 @@ color: var(--title-color);
 .polesContainer {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
   flex-direction: row;
+  
 }
 
 .imgPoles {
